<resources>
    <string name="app_name">Calculator2</string>
    <string name="num_7">7</string>
    <string name="num_8">8</string>
    <string name="ce">CE</string>
    <string name="num_4">4</string>
    <string name="num_5">5</string>
    <string name="num_6">6</string>
    <string name="num_9">9</string>
    <string name="c">C</string>
    <string name="mult">*</string>
    <string name="div">/</string>
    <string name="num_1">1</string>
    <string name="num_2">2</string>
    <string name="num_3">3</string>
    <string name="add">+</string>
    <string name="sub">-</string>
    <string name="num_0">0</string>
    <string name="dot">.</string>
    <string name="reverse">+/-</string>
    <string name="equ">=</string>
    <string name="Answer">0</string>
    <string name="num_00">00</string>
</resources>
