<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/background"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/C"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:onClick="initCalculator"
        android:text="@string/c"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/Mult"
        app:layout_constraintDimensionRatio="1"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toRightOf="@+id/Num9"
        app:layout_constraintRight_toLeftOf="@+id/CE"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintVertical_weight="1" />

    <Button
        android:id="@+id/CE"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:onClick="CE"
        android:text="@string/ce"

        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/Div"
        app:layout_constraintDimensionRatio="1"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toRightOf="@+id/C"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintVertical_weight="1" />

    <ImageButton
        android:id="@+id/Add"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/add"
        android:onClick="setOperator"
        android:scaleType="fitXY"

        android:src="@mipmap/add"
        app:layout_constraintBottom_toTopOf="@+id/Sub"
        app:layout_constraintDimensionRatio="1"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toRightOf="@+id/Num3"
        app:layout_constraintRight_toLeftOf="@id/Equal"
        app:layout_constraintTop_toBottomOf="@+id/Mult"
        app:layout_constraintVertical_weight="1" />

    <ImageButton
        android:id="@+id/Div"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/div"
        android:onClick="setOperator"
        android:scaleType="fitXY"
        android:src="@mipmap/div"
        app:layout_constraintBottom_toTopOf="@+id/Equal"
        app:layout_constraintDimensionRatio="1"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toRightOf="@+id/Mult"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CE"
        app:layout_constraintVertical_weight="1" />

    <ImageButton
        android:id="@+id/Dot"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/dot"
        android:onClick="ClickNumber"
        android:scaleType="fitXY"
        android:src="@mipmap/dot"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="1"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toRightOf="@+id/Num0"
        app:layout_constraintRight_toLeftOf="@+id/Sub"
        app:layout_constraintTop_toBottomOf="@+id/Num3"
        app:layout_constraintVertical_weight="1" />

    <ImageButton
        android:id="@+id/Equal"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/equ"
        android:onClick="clickEqual"
        android:scaleType="fitXY"
        android:src="@mipmap/equal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="0.5"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toRightOf="@+id/Add"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Div"
        app:layout_constraintVertical_weight="2" />

    <ImageButton
        android:id="@+id/Mult"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/mult"
        android:onClick="setOperator"
        android:scaleType="fitXY"
        android:src="@mipmap/mult"
        app:layout_constraintBottom_toTopOf="@+id/Add"
        app:layout_constraintDimensionRatio="1"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toRightOf="@+id/Num6"
        app:layout_constraintRight_toLeftOf="@+id/Div"
        app:layout_constraintTop_toBottomOf="@+id/C"
        app:layout_constraintVertical_weight="1" />

    <ImageButton
        android:id="@+id/Num2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/num_2"
        android:onClick="ClickNumber"
        android:scaleType="fitXY"
        android:src="@mipmap/num2"
        app:layout_constraintBottom_toTopOf="@+id/Num0"
        app:layout_constraintDimensionRatio="1"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toRightOf="@+id/Num1"
        app:layout_constraintRight_toLeftOf="@+id/Num3"
        app:layout_constraintTop_toBottomOf="@+id/Num5"
        app:layout_constraintVertical_weight="1" />

    <ImageButton
        android:id="@+id/Num0"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/num_0"
        android:onClick="ClickNumber"
        android:scaleType="fitXY"
        android:src="@mipmap/num0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintHorizontal_weight="2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/Dot"
        app:layout_constraintTop_toBottomOf="@+id/Num1"
        app:layout_constraintVertical_weight="1" />

    <ImageButton
        android:id="@+id/Num1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/num_1"
        android:onClick="ClickNumber"
        android:scaleType="fitXY"
        android:src="@mipmap/num1"
        app:layout_constraintBottom_toTopOf="@+id/Num0"
        app:layout_constraintDimensionRatio="1"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/Num2"
        app:layout_constraintTop_toBottomOf="@+id/Num4"
        app:layout_constraintVertical_weight="1" />

    <ImageButton
        android:id="@+id/Num3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/num_3"
        android:onClick="ClickNumber"
        android:scaleType="fitXY"
        android:src="@mipmap/num3"
        app:layout_constraintBottom_toTopOf="@+id/Dot"
        app:layout_constraintDimensionRatio="1"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toRightOf="@+id/Num2"
        app:layout_constraintRight_toLeftOf="@+id/Add"
        app:layout_constraintTop_toBottomOf="@+id/Num6"
        app:layout_constraintVertical_weight="1" />

    <ImageButton
        android:id="@+id/Num4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/num_4"
        android:onClick="ClickNumber"
        android:scaleType="fitXY"
        android:src="@mipmap/num4"
        app:layout_constraintBottom_toTopOf="@+id/Num1"
        app:layout_constraintDimensionRatio="1"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/Num5"
        app:layout_constraintTop_toBottomOf="@+id/Num7"
        app:layout_constraintVertical_weight="1" />

    <ImageButton
        android:id="@+id/Num5"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/num_5"
        android:onClick="ClickNumber"
        android:scaleType="fitXY"
        android:src="@mipmap/num5"
        app:layout_constraintBottom_toTopOf="@+id/Num2"
        app:layout_constraintDimensionRatio="1"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toRightOf="@+id/Num4"
        app:layout_constraintRight_toLeftOf="@+id/Num6"
        app:layout_constraintTop_toBottomOf="@+id/Num8"
        app:layout_constraintVertical_weight="1" />

    <ImageButton
        android:id="@+id/Num6"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/num_6"
        android:onClick="ClickNumber"
        android:scaleType="fitXY"
        android:src="@mipmap/num6"
        app:layout_constraintBottom_toTopOf="@+id/Num3"
        app:layout_constraintDimensionRatio="1"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toRightOf="@+id/Num5"
        app:layout_constraintRight_toLeftOf="@+id/Mult"
        app:layout_constraintTop_toBottomOf="@+id/Num9"
        app:layout_constraintVertical_weight="1" />

    <ImageButton
        android:id="@+id/Num7"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/num_7"
        android:onClick="ClickNumber"
        android:scaleType="fitXY"
        android:src="@mipmap/num7"
        app:layout_constraintBottom_toTopOf="@+id/Num4"
        app:layout_constraintDimensionRatio="1"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/Num8"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintVertical_weight="1" />

    <ImageButton
        android:id="@+id/Num8"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/num_8"
        android:onClick="ClickNumber"
        android:scaleType="fitXY"
        android:src="@mipmap/num8"
        app:layout_constraintBottom_toTopOf="@+id/Num5"
        app:layout_constraintDimensionRatio="1"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toRightOf="@+id/Num7"
        app:layout_constraintRight_toLeftOf="@+id/Num9"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintVertical_weight="1" />

    <ImageButton
        android:id="@+id/Sub"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/sub"
        android:onClick="setOperator"
        android:scaleType="fitXY"
        android:src="@mipmap/sub"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="1"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toRightOf="@+id/Dot"
        app:layout_constraintRight_toLeftOf="@+id/Equal"
        app:layout_constraintTop_toBottomOf="@+id/Add"
        app:layout_constraintVertical_weight="1" />

    <TextView
        android:id="@+id/Answer"
        android:layout_width="0dp"
        android:layout_height="67dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:ems="10"
        android:gravity="right|center"
        android:inputType="numberDecimal"
        android:text="@string/Answer"
        android:textSize="48sp"
        app:layout_constraintBottom_toTopOf="@+id/Under"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <ImageButton
        android:id="@+id/Num9"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/num_9"
        android:onClick="ClickNumber"
        android:scaleType="fitXY"
        android:src="@mipmap/num9"
        app:layout_constraintBottom_toTopOf="@+id/Num6"
        app:layout_constraintDimensionRatio="1"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toRightOf="@+id/Num8"
        app:layout_constraintRight_toLeftOf="@+id/C"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintVertical_weight="1" />

    <TextView
        android:id="@+id/Under"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:background="#000000"
        app:layout_constraintBottom_toTopOf="@+id/Num9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Answer" />

</android.support.constraint.ConstraintLayout>